# recsys2021-tutorial

./: .gitignore  README.md  pyproject.toml
examples/: README.md  classification-data.ipynb  real-bandit-data.ipynb  synthetic.ipynb
notebooks/: README.md  classification-data.ipynb  real-bandit-data.ipynb  synthetic.ipynb
real-world/: demo.ipynb
simulations/: README.md  evaluation-of-ope-1.ipynb  evaluation-of-ope-2.ipynb  hyperparameter-tuning-1.ipynb  hyperparameter-tuning-2.ipynb  hyperparameter-tuning.ipynb
