[tool.poetry]
name = "recsys2021-tutorial"
version = "0.1.0"
description = "examples and simulations with Open Bandit Pipeline"
authors = ["usaito <ys552@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.9,<3.10"
scikit-learn = "0.24.2"
numpy = "^1.21.2"
pandas = "^1.3.3"
obp = "0.5.0"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
